syntax = "proto3";

package user.v1;

option go_package = "apiuser/api/user/v1;v1";
option java_package = "com.gomicroim.lib.protos.user";
option java_outer_classname = "User";

message RegisterRequest {
  string device_id = 1;
  int32 app_version = 2;
  string os_version = 3;
}

message RegisterReply {
  string access_token = 1;
  int64 at_expires = 2;
}

message AuthRequest {
  enum LoginType {
    loginTypeMobile = 0;
  }
  enum ClientType{
    clientTypeUnknown = 0;
    clientTypeApp = 1;
    clientTypeWeb = 2;
    clientTypeDesktop = 3;
  }
  message MobileAuth{
    string phone = 2;
    string code = 3;
  }
  LoginType login_type = 1;
  MobileAuth by_mobile = 2;
  ClientType client_type = 3;
}

message TokenInfo {
  string access_token = 1;
  string refresh_token = 2;
  int64 at_expires = 3;
  int64 rt_expires = 4;
}

message AuthReply {
  TokenInfo token = 1;
  int64 user_id = 2;
}

message RefreshTokenRequest {
  // refresh_token 也放在http头部，不单独携带进body
  // string refresh_token = 1;
}

message RefreshTokenReply {
  TokenInfo token = 1;
}